--- a/package.json
+++ b/package.json
@@ -7,19 +7,27 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "check": "biome check ./src",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "shadcn": "pnpm dlx shadcn@latest"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-router": "^1.116.0",
     "@tanstack/react-router-devtools": "^1.116.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.488.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.4"
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@tanstack/router-plugin": "^1.116.1",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
