--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,12 @@
 		"typecheck": {
 			"dependsOn": ["^typecheck"]
 		},
+		"check": {
+			"dependsOn": ["^check"]
+		},
+		"format": {
+			"dependsOn": ["^format"]
+		},
 		"dev": {
 			"persistent": true,
 			"cache": false
