--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -8,6 +8,7 @@
 		"build": "vite build",
 		"typecheck": "tsc -b",
 		"check": "biome check ./src",
+		"format": "biome format ./src",
 		"preview": "vite preview",
 		"shadcn": "pnpm dlx shadcn@latest"
 	},
