--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
 		"packages/**/*.{js,ts,jsx,tsx}": [
 			"biome format --write .",
 			"biome check --write ."
-		],
-		"*.json": ["biome format --write ."]
+		]
 	},
 	"scripts": {
 		"check": "turbo check",
 		"clean": "turbo clean && rm -rf node_modules",
 		"format": "turbo format",
-		"typecheck": "turbo typecheck"
+		"typecheck": "turbo typecheck",
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
+		"husky": "^9.1.7",
 		"lint-staged": "^15.5.1",
 		"turbo": "^2.5.0",
 		"typescript": "~5.7.2"
