feat: hono, trpc, tanstack query setup

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"scripts": {
 		"check": "turbo check",
+		"build": "turbo build",
 		"clean": "turbo clean && rm -rf node_modules",
 		"format": "turbo format",
 		"typecheck": "turbo typecheck",
