--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "webapp",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.1.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -15,8 +15,12 @@
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.2.0",
 		"@tailwindcss/vite": "^4.1.4",
+		"@tanstack/react-query": "^5.74.4",
 		"@tanstack/react-router": "^1.116.0",
 		"@tanstack/react-router-devtools": "^1.116.0",
+		"@train/server": "workspace:^",
+		"@trpc/client": "^11.1.0",
+		"@trpc/tanstack-react-query": "^11.1.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.488.0",
@@ -27,15 +31,12 @@
 		"tw-animate-css": "^1.2.5"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
 		"@tanstack/router-plugin": "^1.116.1",
 		"@types/node": "^22.14.1",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react-swc": "^3.8.0",
 		"globals": "^15.15.0",
-		"typescript": "~5.7.2",
 		"vite": "^6.2.0"
-	},
-	"packageManager": "pnpm@10.8.1"
+	}
 }
