feat: postgress database implementation with drizzle and docker

--- a/biome.json
+++ b/biome.json
@@ -42,6 +42,7 @@
 						"noUnusedLabels": "error",
 						"noUnusedPrivateClassMembers": "error",
 						"noUnusedVariables": "error",
+						"noUnusedImports": "error",
 						"useIsNan": "error",
 						"useValidForDirection": "error",
 						"useYield": "error"
