--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
+		"@types/node": "^22.14.1",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.5.1",
 		"turbo": "^2.5.0",
