--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,9 +9,14 @@
 		"format": "biome format ./src"
 	},
 	"dependencies": {
+		"@clerk/backend": "^1.29.1",
+		"@hono/clerk-auth": "^2.0.0",
 		"@hono/trpc-server": "^0.3.4",
+		"@oslojs/crypto": "^1.0.1",
+		"@oslojs/encoding": "^1.1.0",
 		"@train/database": "workspace:^",
 		"@trpc/server": "^11.1.0",
+		"drizzle-orm": "^0.42.0",
 		"hono": "^4.7.7",
 		"zod": "^3.24.3"
 	},
