--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
 	"devDependencies": {
 		"@train/tsconfig": "workspace:^",
 		"@types/bun": "^1.2.10",
+		"trpc-ui": "^1.0.15",
 		"tsx": "^4.19.3"
 	},
 	"engines": {
