refactor: rename packages name

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@train/database",
+	"name": "@myapp/database",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -26,7 +26,7 @@
 		"postgres": "^3.4.5"
 	},
 	"devDependencies": {
-		"@train/tsconfig": "workspace:^",
+		"@myapp/tsconfig": "workspace:^",
 		"drizzle-kit": "^0.31.0",
 		"tsx": "^4.19.3"
 	},
