--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@train/server",
+	"name": "@myapp/server",
 	"version": "0.0.1",
 	"main": "src/index.ts",
 	"scripts": {
@@ -14,14 +14,14 @@
 		"@hono/trpc-server": "^0.3.4",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
-		"@train/database": "workspace:^",
+		"@myapp/database": "workspace:^",
 		"@trpc/server": "^11.1.0",
 		"drizzle-orm": "^0.42.0",
 		"hono": "^4.7.7",
 		"zod": "^3.24.3"
 	},
 	"devDependencies": {
-		"@train/tsconfig": "workspace:^",
+		"@myapp/tsconfig": "workspace:^",
 		"@types/bun": "^1.2.10",
 		"trpc-ui": "^1.0.15",
 		"tsx": "^4.19.3"
