--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -19,7 +19,7 @@
 		"@tanstack/react-query": "^5.74.4",
 		"@tanstack/react-router": "^1.116.0",
 		"@tanstack/react-router-devtools": "^1.116.0",
-		"@train/server": "workspace:^",
+		"@myapp/server": "workspace:^",
 		"@trpc/client": "^11.1.0",
 		"@trpc/tanstack-react-query": "^11.1.0",
 		"class-variance-authority": "^0.7.1",
