--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@train/tsconfig",
+	"name": "@myapp/tsconfig",
 	"version": "1.0.0",
 	"description": "Base typescript config",
 	"keywords": ["typescript"],
