--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: train-db
+      POSTGRES_DB: myapp-db
     ports:
       - "5432:5432"
     volumes:
